src/snapshots/templates__test__error_unexpected_endif.snap
---
source: src/main.rs
assertion_line: 1133
expression: "Hello {% endif %}"

---
Unexpected keyword: endif. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% endif %}
  │          ^^^^^


