src/snapshots/templates__test__error_unexpected_keyword.snap
---
source: src/main.rs
assertion_line: 1135
expression: "Hello {% in %}"

---
Unexpected keyword: in

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% in %}
  │          ^^


