src/snapshots/templates__test__scan_two_identifiers.snap
---
source: src/main.rs
assertion_line: 840
expression: "Hello {{ name }}, {{ adjective }} to meet you"

---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenValue,
        6..7,
    ),
    (
        Identifier(
            "name",
        ),
        9..13,
    ),
    (
        CloseValue,
        14..15,
    ),
    (
        Text(
            ", ",
        ),
        16..18,
    ),
    (
        OpenValue,
        18..19,
    ),
    (
        Identifier(
            "adjective",
        ),
        21..30,
    ),
    (
        CloseValue,
        31..32,
    ),
    (
        Text(
            " to meet you",
        ),
        33..44,
    ),
]
