src/snapshots/templates__test__scan_with.snap
---
source: src/main.rs
assertion_line: 703
expression: "{> with user as User\n{{ user }}"

---
[
    OpenLine,
    With,
    Identifier(
        "user",
    ),
    As,
    Identifier(
        "User",
    ),
    CloseLine,
    OpenValue,
    Identifier(
        "user",
    ),
    CloseValue,
]
