src/snapshots/templates__test__two_identifiers.snap
---
source: src/main.rs
assertion_line: 130
expression: "Hello { name }, { adjective } to meet you"

---
[
    Text(
        "Hello ",
    ),
    OpenParen,
    Reference(
        "name",
    ),
    CloseParen,
    Text(
        ", ",
    ),
    OpenParen,
    Reference(
        "adjective",
    ),
    CloseParen,
    Text(
        " to meet you",
    ),
]
